--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "tsx scripts/migrate.ts",
+    "migrate:list": "tsx scripts/migrate.ts -- --list",
+    "migrate:status": "tsx scripts/migrate.ts -- --status"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.0",
@@ -22,6 +25,7 @@
     "eslint": "^9.0.0",
     "eslint-config-next": "^16.1.4",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^3.4.13",
+    "tsx": "^4.21.0"
   }
 }
